# boat_tracking

./: .gitignore  Cargo.toml  MIGRATION_PLAN.md  README.md  claude.md  diesel.toml  dioxus.toml  flake.nix  input.css  rust-toolchain.toml  tailwind.config.js  tauri.conf.json
.github/workflows/: auto-release.yml  build.yml  clippy.yml  e2e.yml  release.yml  test.yml
capabilities/: default.json
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: batch_detail.rs  batches.rs  boats.rs  common_regressions.rs  issues.rs  scenarios.rs  smoke.rs
migrations/2024-03-03-152841_init/: down.sql  up.sql
public/: tailwind.css  toast.js
src/: lib.rs  main.rs  schema.rs
src/api/: mod.rs  wire.rs
src/db/: boat.rs  issue.rs  mod.rs  state.rs  use_event.rs  use_event_batch.rs  use_scenario.rs
src/db/boat/: queries.rs  types.rs
src/db/issue/: queries.rs
src/db/tests/: batch_events.rs  boat_stats.rs  issue_boat.rs  mod.rs  use_event_boat.rs  use_scenario.rs
src/db/use_event/: queries.rs
src/db/use_event_batch/: queries.rs
src/db/use_scenario/: queries.rs
src/handlers/: batches.rs  boats.rs  issues.rs  mod.rs  scenarios.rs
src/handlers/batches/: mod.rs  session.rs
src/templates/: layout.rs  mod.rs
src/templates/batches/: creation.rs  detail.rs  list.rs  mod.rs
src/templates/boats/: charts.rs  detail.rs  form.rs  issues.rs  list.rs  mod.rs
src/templates/components/: common.rs  dropdown.rs  mod.rs  modal.rs  toast.rs
src/templates/issues/: form.rs  list.rs  mod.rs
src/templates/scenarios/: form.rs  list.rs  mod.rs
src/ui/: mod.rs  state.rs
src/ui/components/: batch.rs  batch_list.rs  boat.rs  boat_list.rs  issue_list.rs  mod.rs  modal.rs  new_boat.rs  new_issue.rs  old_batch.rs  toast.rs
src/ui/components/batch/: list_pane.rs  mod.rs  search_pane.rs  service.rs
src/ui/components/batch/list_pane/: mod.rs  submit_row.rs
src/ui/components/boat/: issues_tab.rs  mod.rs  summary_tab.rs  use_count_chart_tabs.rs
src/ui/components/boat/creation_edit_form/: edit_modal.rs  edit_tab.rs  mod.rs  new_boat_page.rs  service.rs
src/ui/util/: loadable.rs  mod.rs  sleep.rs  time.rs
