[package]
name = "boat_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ssr = ["dioxus-fullstack/axum", "dioxus-router/fullstack", "axum", "diesel/sqlite", "deadpool-diesel/sqlite", "tokio"]
web = ["dioxus-fullstack/web", "dioxus-router/web","dioxus-web", "web-sys", "wasm-bindgen"]

[dependencies]
chrono = {version = "0.4.34", features = ["serde"]}
serde = {version= "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
getrandom = {version = "0.2.12", features = ["js"]}

diesel-derive-enum = {version="2.1.0", features = ["sqlite"]}
diesel-derive-newtype = "2.1.2"
deadpool-diesel = {version = "0.5.0", features = []}
diesel = {version = "2.3.7", features = ["chrono", "returning_clauses_for_sqlite_3_35"], optional = false}

dioxus = "0.5.1"
dioxus-router = { version = "0.5.0", features = [] }
dioxus-fullstack = { version = "0.5.2"}
# features = ["router", "dioxus-router"] 
# dioxus-charts= {git = "https://github.com/DogeDark/dioxus-charts", branch = "0.5-support"}
dioxus-charts= "0.2.0" 

dioxus-web = { version = "0.5.0-alpha.2", optional = true }
axum = {version = "0.7.0", features = ["ws"], optional = true}
tokio = {version = "1.0.0", features = [], optional = true}
futures = "0.3.30"

# HTMX + Maud migration dependencies
maud = "0.26"
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

anyhow = "1.0.80"


# wasm-bindgen needs to be the same version as the dx tool.
# Be careful about updating these without updating the flake too.
# The version of the tool in nix should be the limiting factor
web-sys = {version = "0.3.66", features = ["Window"], optional = true }
wasm-bindgen = {version = "0.2.100", optional = true}
wasm-bindgen-futures = "0.4.50"
async-trait = "0.1.77"
thiserror = "1.0.58"

indexmap = "2.2.5"

tracing = "0.1.40"
tracing-subscriber = "=0.3.18"
tracing-web = "0.1.3"
csv = "1.3.0"
reqwest = "0.12.2"
