[package]
name = "boat_tracking"
version = "0.1.0"
edition = "2021"

[features]
tauri = ["dep:tauri", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2.5", features = [], optional = true }

[dependencies]
tauri = { version = "2.10", features = [], optional = true }
chrono = {version = "0.4.34", features = ["serde"]}
serde = {version= "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
serde_qs = "0.13"

diesel-derive-enum = {version="2.1.0", features = ["sqlite"]}
diesel-derive-newtype = "2.1.2"
deadpool-diesel = {version = "0.5.0", features = ["sqlite"]}
diesel = {version = "2.3.7", features = ["chrono", "returning_clauses_for_sqlite_3_35", "sqlite"]}
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

axum = {version = "0.8", features = ["ws"]}
tokio = {version = "1.0.0", features = ["full"]}
futures = "0.3.30"

# HTMX + Maud dependencies
maud = "0.26"
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
axum-htmx = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
http = "1.4"

anyhow = "1.0.80"
async-trait = "0.1.77"
thiserror = "1.0.58"

tracing = "0.1.40"
tracing-subscriber = "=0.3.18"
csv = "1.3.0"
rolling-file = "0.2.0"
tracing-appender = "0.2.4"
directories = "6.0.0"
